--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,12 @@ html, body{
   opacity: 1;
   transform: translateY(0);
 }
+
+/* index.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
