--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,8 @@ html, body{
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.reveal.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
